--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "extends": "../tsconfig.json",
+    "include": ["../cypress/**/*.ts"],
     "compilerOptions": {
         "noEmit": false,
         "isolatedModules": false,
