--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~4.6.4"
   },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^5.11.1",
     "@next/eslint-plugin-next": "^12.1.6",
     "@types/amplitude-js": "^8.16.0",
     "@types/react": "^17.0.15",
@@ -37,24 +38,25 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
-    "next": "^13.2.4",
+    "next": "^13.4.19",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
-    "tailwindcss": "^3.3.3"
+    "start-server-and-test": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "ts-loader": "^9.3.0",
+    "yet-another-fetch-mock": "^4.1.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "dev-ingen-dekorator": "NO_DECORATOR=true npm run dev",
-    "start": "next start",
+    "start": "next start -p 8080",
     "start-ingen-dekorator": "NO_DECORATOR=true npm start",
     "build": "next build",
     "cy:open": "cypress open",
+    "e2e": "start-test dev-ingen-dekorator http://localhost:8080/syk/info/aktivitetsplikt cy:open",
     "prettier": "prettier --write ./src/**",
     "lint": "eslint --ext=ts,tsx src cypress",
     "lint:fix": "eslint --ext=ts,tsx src cypress --fix",
-    "format": "npm run prettier:write && npm run lint:fix",
-    "test": "npm run cypress",
-    "cypress": "cypress run --component",
-    "cypress:open": "cypress open --component"
+    "format": "npm run prettier:write && npm run lint:fix"
   }
 }
