--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@navikt/ds-tokens": "^5.2.1",
     "@navikt/nav-dekoratoren-moduler": "^2.1.3",
     "@navikt/next-logger": "^1.18.0",
+    "@navikt/oasis": "^3.2.2",
     "amplitude-js": "^8.18.1",
     "axios": "^1.6.0",
     "dayjs": "^1.11.1",
-    "openid-client": "^5.1.9",
     "pino": "^8.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
